fixed path issues on windows